use threejs cdn, make ratiod loop just use vmin for now

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="author" content="Michael Ruigrok"/>
 		<title>Space Jam Redux</title>
 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/103/three.min.js" integrity="sha256-T4lfPbatZLyNhpEgCvtmXmlhOUq0HZHkDX4cMlQWExA=" crossorigin="anonymous"></script>
 		<link href="style.css" type="text/css" rel="stylesheet"/>
 	</head>
 	
@@ -25,7 +26,6 @@
 			<img class="studio-store" src="img/p-studiostore.gif" alt="Warner Studio Store"/>
 		</main>
 		<div id="starscape">
-			<script src="three.js"></script>
 			<script src="starscape.js"></script>
 			<script type="text/javascript">
 				console.log(window.innerHeight);
